[package]
name = "cesride"
version = "0.3.0"
edition = "2021"
description = "Cryptographic primitives for use with Composable Event Streaming Representation (CESR)"
license = "Apache-2.0"
keywords = ["cesr", "keri", "acdc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1"
argon2 = "~0.5"
base64 = "~0.21"
blake2 = "~0.10"
blake3 = "~1"
chrono = { version = "~0.4", default-features = false, features = ["clock"] }
ed25519-dalek = "~1"
indexmap = "~1"
k256 = "~0.13"
lazy_static = "~1"
num-rational = "~0.4"
p256 = "~0.13"
rand = "0.7.0" # this needs pinning for one of the seeding pieces of a signing suite
rand_core = "~0.6"
regex = "~1"
serde_json = { version = "~1", features = ["preserve_order"] }
sha2 = "~0.10"
sha3 = "~0.10"
thiserror = "~1"
zeroize = "~1"

[dev-dependencies]
hex-literal = "0.3.4"
hex = "0.4.3"
rstest = "0.17.0"
