[package]
name = "cesride"
version = "0.7.0"
edition = "2021"
description = "Cryptographic primitives for use with Composable Event Streaming Representation (CESR)"
license = "Apache-2.0"
keywords = ["cesr", "keri", "acdc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "~1", features = ["backtrace"] }
argon2 = "~0.5"
base64 = "~0.21"
blake2 = "~0.10"
blake3 = "~1"
chrono = { version = "~0.4", default-features = false, features = ["clock"] }
crystals-dilithium = "~1"
ed25519-dalek = { version = "2.0.0-rc.2", features = ["rand_core"] }
indexmap = "~1"
k256 = "~0.13"
lazy_static = "~1"
num-rational = "~0.4"
p256 = "~0.13"
rand_core = "~0.6"
regex = "~1"
serde_json = { version = "~1", features = ["preserve_order"] }
sha2 = "~0.10"
sha3 = "~0.10"
thiserror = "~1"
zeroize = { version = "~1", features = ["derive"] }

[dev-dependencies]
hex-literal = "0.4.0"
hex = "0.4.3"
rstest = "0.17.0"
